use clang-format to format codebase